<resources>
    <string name="app_name">EcommerceTask</string>
    <string name="networkLost">Network lost</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="whatYouWouldLikeToBuy">What you would like to buy?</string>
    <string name="viewAll">View all</string>
    <string name="seeAll">See all</string>
    <string name="seeMore">See more</string>
    <string name="relatedProducts">Related products</string>
    <string name="selectPreference">Select preference</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="jd">JD</string>
    <string name="almostDone">Almost done</string>
    <string name="deliveryDetails">Delivery details</string>
    <string name="submit">Submit</string>
    <string name="fullName">Full name</string>
    <string name="jordanPhoneCode">+962</string>
    <string name="phoneNumber">Phone number</string>
    <string name="payment">Payment</string>
    <string name="cashOnDelivery">Cash on delivery</string>
    <string name="creditCard">Credit card</string>
    <string name="promoCode">Promo code</string>
    <string name="apply">Apply</string>
    <string name="noData">No data</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="addToBasket">Add to basket</string>
    <string name="qty">Qty</string>
    <string name="pleaseAddPhoneNumber">Please add correct phone number</string>
    <string name="pleaseAddYourName">Please add full name</string>
</resources>